WIP instrumenting find_passes in libs

--- a/jupyter_notebooks/fast-find-passes.ipynb
+++ b/jupyter_notebooks/fast-find-passes.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -20,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +146,7 @@
        "array([   5,   11,   17, ..., 8379, 8385, 8391])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,16 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f88b1be9ac8>]"
+       "[<matplotlib.lines.Line2D at 0x7f7aab963c18>]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -178,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -220,16 +230,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f88b1af7c18>]"
+       "[<matplotlib.lines.Line2D at 0x7f7aaadfc710>]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -254,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -280,62 +290,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0029784387443215"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.max(np.abs(t1 - t0001))"
+    "visible_idx = np.where(true_el > 0.0)[0]\n",
+    "visible_el = true_el[visible_idx]\n",
+    "visible_tca = true_peak_times[visible_idx]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.189741331152618"
+       "datetime.datetime(2018, 6, 20, 13, 13, 51, 730049)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.max(np.abs(t01 - t0001))"
+    "start + timedelta(seconds=visible_tca[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "here\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dan/ed/satnogs/scheduling-bazaar/jupyter_notebooks/pyorbital/orbital.py:372: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ((b - a) * (f_b - f_c) - (b - c) * (f_b - f_a)))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16085 30.932692307692307\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyorbital.orbital import Orbital\n",
+    "\n",
+    "body = Orbital(line0, line1=line1, line2=line2)\n",
+    "\n",
+    "body.get_position_calls = 0\n",
+    "passes = body.get_next_passes(\n",
+    "            start,\n",
+    "            24*90,\n",
+    "            -87.0439,\n",
+    "            41.4639,\n",
+    "            245.1,\n",
+    "            horizon=0.0)\n",
+    "\n",
+    "print(body.get_position_calls, body.get_position_calls / len(passes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.1772241471335292"
+       "15.5420375"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.max(np.abs(t001 - t0001))"
+    "body.tle.mean_motion"
    ]
   },
   {
@@ -343,7 +397,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#\n",
+    "#\n",
+    "#  Compare pyorbital with ephem for tracking\n"
+   ]
   }
  ],
  "metadata": {
