instrumented find_0alt() calls

--- a/notes/fast-pass-prediction.adoc
+++ b/notes/fast-pass-prediction.adoc
@@ -90,6 +90,8 @@ Now, when the rising/setting of a satellite will correspond to the moment the mo
 
 
 
+Instrumenting `find_0alt()` indicates most calls converge in 5 steps.
+
 
 
 
