cleanup find-fast-passes notebook

--- a/jupyter_notebooks/fast-find-passes.ipynb
+++ b/jupyter_notebooks/fast-find-passes.ipynb
@@ -118,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.72 s ± 150 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.81 s ± 8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -200,12 +200,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "618 38842 62.85113268608414\n"
+      "N passes: 618\n",
+      "N calls: 38842\n",
+      "Avg calls per found pass: 62.85113268608414\n"
      ]
     }
    ],
    "source": [
-    "print(len(visible_tca), sat_azel.calls, sat_azel.calls / len(visible_tca))"
+    "print('N passes:', len(visible_tca))\n",
+    "print('N calls:', sat_azel.calls)\n",
+    "print('Avg calls per found pass:', sat_azel.calls / len(visible_tca))"
    ]
   },
   {
@@ -216,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc9f3069630>]"
+       "[<matplotlib.lines.Line2D at 0x7f9040b9e940>]"
       ]
      },
      "execution_count": 9,
@@ -242,6 +246,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Find time to compute using pyephem.observer.next_pass()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -257,7 +268,17 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valparaisio University <--> ISS\n",
+      "Valparaisio University <--> ISS\n",
+      "2.85 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "observer = {\n",
@@ -273,8 +294,8 @@
     "    'tle':[line0, line1, line2],\n",
     "}\n",
     "\n",
-    "\n",
-    "passes = db.compute_passes_ephem([observer, satellite, start, len(visible_tca), INTERVAL_SECONDS/60])"
+    "passes = db.compute_passes_ephem([observer, satellite, start, len(visible_tca), INTERVAL_SECONDS/60])\n",
+    "%timeit -r1 -n1 passes = db.compute_passes_ephem([observer, satellite, start, len(visible_tca), INTERVAL_SECONDS/60])"
    ]
   },
   {
@@ -283,29 +304,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%timeit db.compute_passes_ephem([obs, sat, start, len(visible_tca), INTERVAL_SECONDS/60])\n",
-    "\n",
-    "# 278228 obj_cir() calls"
+    "# number of calls from an instrumented pyephem for these conditions\n",
+    "obj_cir_calls = 278228"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Speedup factor and percentage reduction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.163070902631173"
+       "-86.03950716678408"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1/(38842 / 278228)"
+    "100 * ((38842 / 278228) - 1)"
    ]
   },
   {
@@ -316,10 +343,30 @@
     {
      "data": {
       "text/plain": [
-       "618"
+       "7.163070902631173"
       ]
      },
      "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/(sat_azel.calls / 278228)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "618"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -375,8 +422,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
