bazaar.cfg and store stations as dict

--- a/jupyter_notebooks/station-passes-viz.ipynb
+++ b/jupyter_notebooks/station-passes-viz.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stations = db.load_stations('../python-files/network-stations.json')\n",
+    "stations = db.load_stations()\n",
     "satellites = db.load_satellites('../python-files/satellites.json', '../python-files/tle.sqlite')"
    ]
   },
@@ -169,7 +169,7 @@
     "plt.tight_layout()\n",
     "fig.autofmt_xdate()\n",
     "\n",
-    "plt.savefig('kb9jhu.png', dpi=150, bbox_inches='tight')"
+    "#plt.savefig('kb9jhu.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
