notebooks as canaries for testing package

--- a/notebooks/station-passes-viz.ipynb
+++ b/notebooks/station-passes-viz.ipynb
@@ -22,8 +22,8 @@
     "import sys\n",
     "\n",
     "#adds folder to the search path for 'import'\n",
-    "sys.path.append('../python-files')\n",
-    "sys.path.append('../broker')  #this is where client.py lives\n",
+    "#sys.path.append('../python-files')\n",
+    "#sys.path.append('../broker')  #this is where client.py lives\n",
     "\n"
    ]
   },
@@ -33,9 +33,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import db\n",
-    "import schedulers\n",
-    "import client"
+    "from satbazaar import db\n",
+    "from satbazaar import schedulers\n",
+    "from satbazaar import client"
    ]
   },
   {
@@ -44,8 +44,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stations = db.load_stations()\n",
-    "satellites = db.load_satellites('../python-files/satellites.json', '../python-files/tle.sqlite')"
+    "# script 'get-stations.py' creates this file\n",
+    "stations = db.load_stations('data/stations.json')\n",
+    "\n",
+    "# script 'get-satellites.py' creates both files\n",
+    "satellites = db.load_satellites('data/satellites.json', 'data/tle.sqlite')"
    ]
   },
   {
@@ -55,7 +58,9 @@
    "outputs": [],
    "source": [
     "gs = stations['KB9JHU']\n",
-    "passes = db.getpasses(dbfile='../python-files/allpasses.sqlite', gs=gs['name'], start='2018-06-20', end='2018-06-20 04:00')"
+    "\n",
+    "# script 'generate-allpasses.py' generates the database of sat-gs pass predictions\n",
+    "passes = db.getpasses(dbfile='data/allpasses.sqlite', gs=gs['name'], start='2018-06-20', end='2018-06-20 04:00')"
    ]
   },
   {
@@ -73,6 +78,9 @@
    ],
    "source": [
     "c = client.AllClient(gs)\n",
+    "\n",
+    "\n",
+    "\n",
     "clients = schedulers.random_scheduler(passes=passes, clients={gs['name']:c}, satellites=satellites, debug=True)"
    ]
   },
