--- a/notebooks/station-passes-viz.ipynb
+++ b/notebooks/station-passes-viz.ipynb
@@ -19,12 +19,7 @@
     "import pprint\n",
     "pp = pprint.PrettyPrinter().pprint\n",
     "\n",
-    "import sys\n",
-    "\n",
-    "#adds folder to the search path for 'import'\n",
-    "#sys.path.append('../python-files')\n",
-    "#sys.path.append('../broker')  #this is where client.py lives\n",
-    "\n"
+    "import sys"
    ]
   },
   {
@@ -72,16 +67,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*******************************************************************************************************************************"
+      "*******************************************************************************************************************************\n",
+      "AllClient (KB9JHU lat=39.24, lon=-86.31, alt=280.00)\n",
+      "c.calendar_value():\n",
+      "        SNC: 52475.966957\n",
+      "c.busy_time(): 52475.966957\n"
      ]
     }
    ],
    "source": [
     "c = client.AllClient(gs)\n",
+    "clients = schedulers.random_scheduler(passes=passes, clients={gs['name']:c}, satellites=satellites, debug=True)\n",
     "\n",
-    "\n",
-    "\n",
-    "clients = schedulers.random_scheduler(passes=passes, clients={gs['name']:c}, satellites=satellites, debug=True)"
+    "print(c)\n",
+    "print('c.calendar_value():')\n",
+    "for currency, amount in c.calendar_value().items():\n",
+    "    print('%11s: %f' % (currency, amount))\n",
+    "print('c.busy_time():', c.busy_time())"
    ]
   },
   {
