--- a/notebooks/observations-status.ipynb
+++ b/notebooks/observations-status.ipynb
@@ -15,7 +15,9 @@
     "import numpy as np\n",
     "\n",
     "from intervaltree import IntervalTree, Interval\n",
-    "from iso8601 import parse_date"
+    "from iso8601 import parse_date\n",
+    "\n",
+    "from satbazaar import db"
    ]
   },
   {
@@ -25,7 +27,7 @@
    "outputs": [],
    "source": [
     "# script 'get-observations.py' generates this file\n",
-    "observations = json.load(bz2.open('data/observations.json.bz2'))"
+    "observations = db.load_observations()"
    ]
   },
   {
