--- a/notebooks/station-passes-viz.ipynb
+++ b/notebooks/station-passes-viz.ipynb
@@ -40,10 +40,10 @@
    "outputs": [],
    "source": [
     "# script 'get-stations.py' creates this file\n",
-    "stations = db.load_stations('data/stations.json')\n",
+    "stations = db.load_stations()\n",
     "\n",
     "# script 'get-satellites.py' creates both files\n",
-    "satellites = db.load_satellites('data/satellites.json', 'data/tle.sqlite')"
+    "satellites = db.load_satellites()"
    ]
   },
   {
@@ -55,7 +55,7 @@
     "gs = stations['KB9JHU']\n",
     "\n",
     "# script 'generate-allpasses.py' generates the database of sat-gs pass predictions\n",
-    "passes = db.getpasses(dbfile='data/passes.sqlite', gs=gs['name'], start='2018-07-11', end='2018-07-11 04:00')"
+    "passes = db.getpasses(gs=gs['name'], start='2018-07-11', end='2018-07-11 04:00')"
    ]
   },
   {
