make station-passes-viz.ipynb deterministic

--- a/notebooks/station-passes-viz.ipynb
+++ b/notebooks/station-passes-viz.ipynb
@@ -67,8 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "****************************************************************************************************************************************************************\n",
-      "AllClient (KB9JHU lat=39.24, lon=-86.31, alt=280.00)\n",
+      "****************************************************************************************************************************************************************AllClient (KB9JHU lat=39.24, lon=-86.31, alt=280.00)\n",
       "c.calendar_value():\n",
       "        SNC: 60185.240966\n",
       "c.busy_time(): 60185.240966\n"
@@ -77,7 +76,7 @@
    ],
    "source": [
     "c = client.AllClient(gs)\n",
-    "clients = schedulers.random_scheduler(passes=passes, clients={gs['name']:c}, satellites=satellites, debug=True)\n",
+    "clients = schedulers.FirstScheduler(passes=passes, clients={gs['name']:c}, satellites=satellites, debug=True)\n",
     "\n",
     "print(c)\n",
     "print('c.calendar_value():')\n",
