make find-fast-passes.ipynb run again

--- a/jupyter_notebooks/fast-find-passes.ipynb
+++ b/jupyter_notebooks/fast-find-passes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,21 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pylab inline\n",
-    "tau = 2.0 * pi"
+    "from datetime import timedelta\n",
+    "\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "from scipy.signal import argrelmax\n",
+    "from scipy.optimize import minimize_scalar\n",
+    "from scipy.optimize import brentq\n",
+    "\n",
+    "import ephem\n",
+    "from iso8601 import parse_date"
    ]
   },
   {
@@ -34,14 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import timedelta\n",
-    "\n",
-    "from scipy.signal import argrelmax\n",
-    "from scipy.optimize import minimize_scalar\n",
-    "from scipy.optimize import brentq\n",
-    "\n",
-    "import ephem\n",
-    "from iso8601 import parse_date\n",
+    "pi = np.pi\n",
     "\n",
     "def datestr(s):\n",
     "    return parse_date(s, default_timezone=None)\n",
@@ -118,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.81 s ± 8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.53 s ± 34.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -220,7 +216,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9040b9e940>]"
+       "[<matplotlib.lines.Line2D at 0x7ff8bc4321d0>]"
       ]
      },
      "execution_count": 9,
@@ -239,10 +235,10 @@
     }
    ],
    "source": [
-    "plot(peak_true_times, peak_el, '+')\n",
-    "plot(visible_tca, visible_el, '+r')\n",
-    "plot(visible_aos, np.zeros_like(visible_tca), '.r')\n",
-    "plot(visible_los, np.zeros_like(visible_tca), '.r')"
+    "plt.plot(peak_true_times, peak_el, '+')\n",
+    "plt.plot(visible_tca, visible_el, '+r')\n",
+    "plt.plot(visible_aos, np.zeros_like(visible_tca), '.r')\n",
+    "plt.plot(visible_los, np.zeros_like(visible_tca), '.r')"
    ]
   },
   {
@@ -259,9 +255,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../python-files')\n",
     "\n",
-    "import db"
+    "from satbazaar import db"
    ]
   },
   {
@@ -275,7 +270,7 @@
      "text": [
       "Valparaisio University <--> ISS\n",
       "Valparaisio University <--> ISS\n",
-      "2.85 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+      "2.89 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
      ]
     }
    ],
@@ -292,6 +287,7 @@
     "satellite = {\n",
     "    'name':line0,\n",
     "    'tle':[line0, line1, line2],\n",
+    "    'norad_cat_id': int(line2.split()[1]),\n",
     "}\n",
     "\n",
     "passes = db.compute_passes_ephem([observer, satellite, start, len(visible_tca), INTERVAL_SECONDS/60])\n",
@@ -332,7 +328,7 @@
     }
    ],
    "source": [
-    "100 * ((38842 / 278228) - 1)"
+    "100 * ((sat_azel.calls / 278228) - 1)"
    ]
   },
   {
@@ -403,22 +399,22 @@
    ],
    "source": [
     "\n",
-    "figure(figsize=(20, 6))\n",
+    "plt.figure(figsize=(20, 6))\n",
     "\n",
-    "interactive(False)\n",
+    "plt.interactive(False)\n",
     "for p in passes:\n",
     "    aos = td(p.start)\n",
     "    tca = td(p.tca)\n",
     "    los = td(p.end)\n",
     "    el = p.max_el\n",
-    "    plot(aos, 0.0, '+b')\n",
-    "    plot(tca, el, '+b')\n",
-    "    plot(los, 0.0, '+b')\n",
+    "    plt.plot(aos, 0.0, '+b')\n",
+    "    plt.plot(tca, el, '+b')\n",
+    "    plt.plot(los, 0.0, '+b')\n",
     "\n",
-    "plot(visible_aos, np.zeros_like(visible_aos), 'xr')\n",
-    "plot(visible_los, np.zeros_like(visible_aos), 'xr')\n",
-    "plot(visible_tca, visible_el, 'xr')\n",
-    "show()"
+    "plt.plot(visible_aos, np.zeros_like(visible_aos), 'xr')\n",
+    "plt.plot(visible_los, np.zeros_like(visible_aos), 'xr')\n",
+    "plt.plot(visible_tca, visible_el, 'xr')\n",
+    "plt.show()"
    ]
   },
   {
